# Necati-Ergin-C-Programming-Notes

./: .gitignore  C Programming Notes - Necati Ergin.md  CMakeLists.txt  README.md
Homeworks/ODEV1/: odev1.c
Homeworks/ODEV2/: odev2.c
Homeworks/ODEV3/: ODEV3.c
Homeworks/ODEV4/: odev4.c
Homeworks/ODEV5/: odev5.c
Homeworks/ODEV6/: odev6.c
Homeworks/ODEV7/: odev7.c
Homeworks/ODEV8/: odev8.c
Notes/: C Programming Notes - Necati Ergin.md
libs/Inc/: date.h  fpointers.h  nec_type.h  nutility.h  person.h  personlist.h
libs/Src/: date.c  fpointers.c  main.c  nec_type.c  nutility.c  person.c  personlist.c  yavuz.txt
